--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,12 +12,13 @@ body {
     background-color: #2D407C;
     z-index: 1000;
     display: flex;
-   
+  
   }
   
   .logo {
     display: flex;
     font-family: 'Chela One', cursive;
+    color: white;
     align-items: center; /* Garante que o logo e o texto estejam alinhados verticalmente */
   }
   .logo img {
@@ -25,49 +26,53 @@ body {
     height: auto;
     margin-left: 0px;
   }
-  
-  .actions {
+  .barraPesquisa {
+    position: relative; /* Para que o ícone possa ser posicionado dentro do campo */
+    width: 500px; /* Largura da barra de pesquisa */
     display: flex;
-    gap: 10px; 
+    align-items: center;
+    margin-left: 10%;
+  }
   
-    
+  .barraPesquisa input {
+    width: 100%;
+    padding: 10px 40px 10px 20px; /* Espaço extra para o ícone */
+    border-radius: 20px;
+    border: 2px solid #ccc;
+    font-size: 16px;
   }
-  .action {
-    display: flex;
-    gap: 10px; 
-  }
-  .action .btn {
-    padding: 10px 20px;
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    height: 40px;
-    margin-top: 0px;
-  }
-  .action .btn:hover {
-    background-color: #1465bc; 
-  } 
   
-  .btn{
-    width: 150px;
+  .search-icon2 {
+    position: absolute;
+    right: 10px;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    cursor: pointer;
   }
+  
+  .search-icon i {
+    font-size: 16px;
+    color: #666;
+  }
+  
   .profile {
     display: flex;
     align-items: center;
     cursor: pointer;
+    margin-left: 20%;
   }
   
   .profile-img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: 20px;
+    margin-right: 0px;
   }
   
   .saudacao {
@@ -79,13 +84,11 @@ body {
     display: flex;
     align-items: flex-start;
     gap: 20px;
-    margin-left: 80px;
-    margin-top: 40px;
   }
   .conteudo {
     padding: 20px;
-    margin-top: 80px; /* Espaço para o header */
-    margin-left: 220px; /* Espaço para a barra de matérias */
+    margin-top: 5%; /* Espaço para o header */
+    margin-left: 20%; /* Espaço para a barra de matérias */
     margin-bottom: 60px; /* Espaço para o footer */
     height: calc(100vh - 80px - 60px); /* Altura ajustada */
     flex-grow: 1;
@@ -107,8 +110,8 @@ body {
   .materias {
     position: fixed;
     left: 0;
-    top: 80px; /* Altura do header */
-    bottom: 0px; /* Altura do footer */
+    top: 80px; /* Ajustado para o header */
+    bottom: 0;
     width: 200px;
     background-color: #f9f9f9;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
@@ -116,46 +119,42 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    overflow: auto; /* Permite rolagem vertical */
-    z-index: 1000;
-   
+    overflow: auto;
 }
 
-  
-  .materias-titulo {
+.materias-titulo {
     font-size: 20px;
     font-family: 'Chela One', cursive;
     margin-bottom: 15px;
     color: #333;
-    text-align: left; /* Alinhado à esquerda */
-  }
-  
-  .materias-lista {
+}
+
+.materias-lista {
     list-style: none;
     padding: 0;
     width: 100%;
-  }
-  
-  .materias-lista li {
+}
+
+.materias-lista li {
     margin-bottom: 10px;
     width: 100%;
-  }
-  
-  .materias-lista a {
+}
+
+.materias-lista a {
     text-decoration: none;
     color: #1465bc;
     font-size: 16px;
     display: block;
     padding: 10px;
-    background-color: #fff;
     border-radius: 5px;
-    width: 100%;
-  }
-  
-  .materias-lista a:hover {
+    background-color: #fff;
+    transition: background-color 0.3s; /* Transição de fundo */
+}
+
+.materias-lista a:hover {
     background-color: #ececec;
     color: #0f4d91;
-  }
+}
 .conteudo-titulo{
     font-family: 'Chela One', cursive;
 }
