--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
   text-align: center;
-
   width: 100%;
-  height: 100vh;
-
+  height: 100%;
+  background-color: white;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
