--- a/src/pages/Cadastro.css
+++ b/src/pages/Cadastro.css
@@ -35,6 +35,7 @@ body {
   display: flex;
   height: 40px;
   margin-top: 0px;
+  margin-left: 30px;
 }
 .action .btn:hover {
   background-color: #1465bc; 
@@ -45,6 +46,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; 
+  margin-left: 30px;
 }
 .content-container {
   display: flex;
@@ -79,7 +81,7 @@ body {
   }
   
   .register-form {
-    margin-top: 50%;
+    margin-top: 700px;
     padding: 30px;
     border-radius: 15px;
     max-width: 400px;
