melhorando as paginas de profile e config, inserindo a opção de mudar o avatar, salvando na api. Atualização do progresso, aparecendo na home

--- a/src/pages/Aulas.css
+++ b/src/pages/Aulas.css
@@ -47,6 +47,7 @@ body {
 
 .container-home {
     position: relative;
+    height: 100%;
     display: flex;
     background-color: white;
     margin-top: 0px; /* Espaço abaixo do cabeçalho fixo */
