--- a/src/pages/Aulas.css
+++ b/src/pages/Aulas.css
@@ -11,21 +11,60 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 80px;
     background-color: #2D407C;
     z-index: 1000;
     display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.logo {
+.logoA {
+    display: flex;
+    font-family: 'Chela One', cursive;
+    color: white;
+    align-items: center; /* Garante que o logo e o texto estejam alinhados verticalmente */
+}
+
+.logoA img {
+    width: 90px; /* Tamanho da imagem do logo */
+    height: auto;
+
+}
+.barraPesquisaA {
+    position: relative;
+    width: 500px;
     display: flex;
     align-items: center;
-}
-
-.logo img {
-    width: 90px;
-    height: auto;
-}
+    margin-left: 10%;
+  }
+  
+  .barraPesquisaA input {
+    width: 100%;
+    padding: 10px 40px 10px 20px;
+    border-radius: 20px;
+    border: 2px solid #ccc;
+    font-size: 16px;
+  }
+  
+  .search-icon {
+    position: absolute;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: rgb(157, 198, 245);
+    border: 2px solid #575757;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .search-icon i {
+    font-size: 16px;
+    color: #666;
+  }
 
 .profile {
     display: flex;
@@ -129,6 +168,7 @@ body {
     margin-bottom: 60px; /* Espaço para o footer */
     height: calc(100vh - 80px - 60px); /* Altura ajustada */
     flex-grow: 1;
+    margin-top: 8%;
 }
 
 /* Ajuste para deixar os cards lado a lado */
@@ -300,5 +340,6 @@ body {
   .loading-gif {
     width: 500px;
     height: auto;
+    margin-top: 30%;
   }
   
