--- a/src/pages/Perfil.css
+++ b/src/pages/Perfil.css
@@ -1,15 +1,17 @@
 body {
   display: flex;
+  background-color: white;
   flex-direction: column;
   min-height: 100vh; /* O corpo vai ocupar pelo menos 100% da altura da viewport */
   margin: 0;
 }
 
-.logo {
+.logoPe {
   display: flex;
   align-items: center; /* Garante que o logo e o texto estejam alinhados verticalmente */
+  font-family: 'Chela One', cursive;
 }
-.logo img {
+.logoPe img {
   width: 90px; /* Tamanho da imagem do logo */
   height: auto;
   margin-left: 0px;
@@ -55,7 +57,7 @@ body {
 }
 
 .imagem-container {
-  margin-top: 30%;
+  margin-top: 40%;
   display: flex;
   flex-direction: column;
   gap: 10px; /* Espaçamento entre as imagens */
@@ -75,8 +77,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; 
-    margin-top: 0px;
     background-color: white;
   }
   
@@ -88,7 +88,7 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
     font-family: "Chela One", cursive;
-    margin-top: 700px;
+    margin-top: 80%;
   }
   
   h1 {
@@ -154,6 +154,7 @@ body {
   padding: 20px;
   text-align: center;
   margin-top: auto;
+  height: 40%;
 }
 
 .footer-content {
